--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,11 +3,12 @@
 
 @import "{{ site.theme }}";
 
-// Custom styles to fix list spacing
-ul {
+// Reduce space between paragraphs and following lists
+p + ul {
     margin-top: 0 !important;
-    ul {
-        margin-top: 0 !important;
-        margin-bottom: 0 !important;
-    }
+}
+
+// Reduce space after h3 subheadings
+h3 {
+    margin-bottom: 0.3em !important;
 }
