--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,3 +12,9 @@ p:has(+ ul) {
 h3 {
     margin-bottom: 0.3em !important;
 }
+
+@media print {
+    header, footer {
+        display: none !important;
+    }
+}
